add events payments
